testsuite/tests/properties/invalid_abstract/list_abstract_in_root.lkt
# Check that abstract properties in the root node are rejected when at least
# one list types does not override it.

import common

class FooNode implements Node[FooNode] {
    @exported @abstract fun prop(): Bool
}

@abstract class BaseNode: FooNode {
    fun prop(): Bool = true
}

class Identifier: BaseNode {
}

class Number: BaseNode {
}
